app/platform/gateway/envoy/env/local/envoy.yaml
static_resources:
  listeners:
    - name: kauche
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      per_connection_buffer_limit_bytes: 52428800
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                use_remote_address: true
                stat_prefix: ingress_http
                codec_type: AUTO
                normalize_path: true
                merge_slashes: true
                path_with_escaped_slashes_action: KEEP_UNCHANGED
                common_http_protocol_options:
                  idle_timeout: 3600s
                  headers_with_underscores_action: ALLOW
                request_timeout: 330s
                access_log:
                  name: log
                  typed_config:
                    '@type': type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                    log_format:
                      json_format:
                        message: '%REQ(HOST)%%REQ(:PATH)%'
                        protocol: '%PROTOCOL%'
                        method: '%REQ(:METHOD)%'
                        path: '%REQ(:PATH)%'
                        host: '%REQ(HOST)%'
                        authority: '%REQ(:AUTHORITY)%'
                        user_agent: '%REQ(USER-AGENT)%'
                        status: '%RESPONSE_CODE%'
                        severity: INFO
                        component: api-gateway-envoy
                        duration: '%DURATION%'
                        upstream_cluster: '%UPSTREAM_CLUSTER%'
                        bytes_received: '%BYTES_RECEIVED%'
                        bytes_sent: '%BYTES_SENT%'
                        request_id: '%REQ(X-REQUEST-ID)%'
                        response_flags: '%RESPONSE_FLAGS%'
                        response_code_details: '%RESPONSE_CODE_DETAILS%'
                        connection_termination_details: '%CONNECTION_TERMINATION_DETAILS%'
                        upstream_request_attempt_count: '%UPSTREAM_REQUEST_ATTEMPT_COUNT%'
                        logging.googleapis.com/trace: '%REQ(x-cloud-logging-trace-context)%'
                        upstream_transport_failure_reason: '%UPSTREAM_TRANSPORT_FAILURE_REASON%'
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      '@type': type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          vm_config:
                            runtime: envoy.wasm.runtime.v8
                            code:
                              local:
                                filename: /etc/envoy/proxy-wasm-cloud-logging-trace-context.wasm
                          configuration:
                            '@type': type.googleapis.com/google.protobuf.StringValue
                            value: |-
                              {
                              	"project_id": "my-projectid"
                              }
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  virtual_hosts:
                    - name: api.kauche.localhost
                      domains:
                        - api.kauche.localhost
                      routes:
                        - match:
                            prefix: /
                          response_headers_to_add:
                            - header:
                                key: Cache-Control
                                value: no-store, no-cache, max-age=0, must-revalidate, proxy-revalidate
                              append_action: OVERWRITE_IF_EXISTS_OR_ADD
                              keep_empty_value: "false"
                          route:
                            cluster: customer-graph
                            timeout: 330s
                            auto_host_rewrite: true
                            retry_policy:
                              retry_on: reset
                              num_retries: 1
                              retriable_status_codes:
                                - 503
  clusters:
    - name: customer-graph
      per_connection_buffer_limit_bytes: 52428800
      connect_timeout: 1.00s
      dns_lookup_family: V4_ONLY
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: customer-graph
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: customer-graph
                      port_value: 8080
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 15000
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
    - name: envoy.resource_monitors.fixed_heap
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
        max_heap_size_bytes: 536870912
  actions:
    - name: envoy.overload_actions.shrink_heap
      triggers:
        - name: envoy.resource_monitors.fixed_heap
          threshold:
            value: 0.95
    - name: envoy.overload_actions.stop_accepting_requests
      triggers:
        - name: envoy.resource_monitors.fixed_heap
          threshold:
            value: 0.98
layered_runtime:
  layers:
    - name: static_layer
      static_layer:
        envoy:
          resource_limits:
            listener:
              kauche:
                connection_limit: 10000
        overload:
          global_downstream_max_connections: 50000
